--- a/roles/haproxy_config/tasks/main.yml
+++ b/roles/haproxy_config/tasks/main.yml
@@ -14,12 +14,12 @@
 - name: Copy HAProxy configuration template
   become: true
   template:
-    src: "{{ role_path }}/files/haproxy.cfg"
+    src: "{{ role_path }}/files/haproxy.cfg.j2"
     dest: /etc/haproxy/haproxy.cfg
     mode: 0644
 
 - name: Ensure haproxy service is running and enabled
   service:
     name: haproxy
-    state: restarted
+    state: started
     enabled: yes
